--- a/SalesWebMVC/Views/Sellers/Index.cshtml
+++ b/SalesWebMVC/Views/Sellers/Index.cshtml
@@ -5,6 +5,9 @@
 }
 
 <h2>@ViewData["Title"]</h2>
+<p>
+    <a asp-action="Create" class="btn btn-default">Create new</a>
+</p>
 
 <table class="table table-striped table-hover">
     <thead>
@@ -41,9 +44,9 @@
                 @Html.DisplayFor(ModelItem => item.BaseSalary);
             </td>
             <td>
-                <a asp-action="Edit" asp-route="@item.Id">Edit</a>
-                <a asp-action="Details" asp-route="@item.Id">Details</a>
-                <a asp-action="Delete" asp-route="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
         }
